chore: first steps towards re-implementing the auto module